force-app/main/default/objects/TAD_Surcharge__c/TAD_Surcharge__c.object-meta.xml
<CustomObject>
    <label>TAD Surcharge</label>
    <nameField>
        <displayFormat>TS-{0000}</displayFormat>
        <label>TAD Surcharge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TAD Surcharges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>