force-app/main/default/objects/TAD_Surcharge__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Departure Date Change</fullName>
            </value>
            <value>
                <fullName>Departure City Change</fullName>
            </value>
            <value>
                <fullName>New OLI created</fullName>
            </value>
            <value>
                <fullName>Upgrade Booking</fullName>
            </value>
            <value>
                <fullName>AddOn Created</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>AE/SB + 30 days</fullName>
            </value>
            <value>
                <fullName>Name Change</fullName>
            </value>
            <value>
                <fullName>Legacy Adjustment</fullName>
            </value>
            <value>
                <fullName>Blackout Date Surcharge</fullName>
            </value>
            <value>
                <fullName>Flight Surcharge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>