force-app/main/default/objects/TAD_Surcharge__c/fields/Reason_If_Others__c.field-meta.xml
<CustomField>
    <fullName>Reason_If_Others__c</fullName>
    <label>Reason (If Others)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>